Working Workout POST method
